syntax = "proto3";
package dydxprotocol.prices;

option go_package = "github.com/dydxprotocol/v4-chain/protocol/x/prices/types";

// Msg defines the Msg service.
service Msg {
  // UpdateMarketPrices updates the oracle price of a market relative to
  // quoteCurrency.
  rpc UpdateMarketPrices(MsgUpdateMarketPrices)
      returns (MsgUpdateMarketPricesResponse);
}

// MsgUpdateMarketPrices is a request type for the UpdateMarketPrices method.
message MsgUpdateMarketPrices {
  // MarketPrice represents a price update for a single market
  message MarketPrice {
    // The id of market to update
    uint32 market_id = 1;
    // The updated price
    uint64 price = 2;
  }

  repeated MarketPrice market_price_updates = 1;
}

// MsgUpdateMarketPricesResponse defines the MsgUpdateMarketPrices response
// type.
message MsgUpdateMarketPricesResponse {}
